--- a/WebContent/styles/testGenMain.css
+++ b/WebContent/styles/testGenMain.css
@@ -147,11 +147,24 @@ body {
 		margin-top: 0px;
         height:initial;
 	}
-	.leftPanel {
+	.leftPanel, .startup-wizard-leftPanel {
 		left: 0px;
 	}
-	.rightPanel {
+	.rightPanel,  .startup-wizard-rightPanel{
 		right: 0px;
+	}
+	
+	.startup-wizard-leftPanel, .startup-wizard-rightPanel{
+		position: fixed;
+		top: 130px;
+		bottom: 0px;
+		width: 50%;
+		overflow-y: auto;
+		margin-top: 0px;
+        height:initial;
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-right: 20px;        
 	}
     .divider{
         height: 100%;
@@ -2100,7 +2113,7 @@ ul.a {
 	top: 157px;
 }
 
-.disciplineContainer, .bookContainer {
+.disciplineContainer {
 	height: 700px;
 	overflow: auto;
 	width: 98%;
